Переписал функционал поиска датчиков DS18B20. Теперь находятся все подключенные датчики и корректно отображаются какой датчик на каком физическом Wire порту подключен.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-Debug
 /Firmware/Code/Smart Garden/Smart Garden/Debug
 /Firmware/Code/.vs
+/Firmware/Code/Smart Garden/Smart Garden/Smart Garden.componentinfo.xml
+/Firmware/Code/Smart Garden/Smart Garden/Smart Garden.cppproj
+/Firmware/Code/Smart Garden/ArduinoCore
