Переименовал @define названия портов ввода\вывода контроллера, добавил приписку PORT_. Все switch с параметрами из бита конфигурации E_ConfigSensor_B в датчиках DS18B20 перевел на #define CONFIG_SENSOR_B_INPUT_GPIO_P1-P6

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /Firmware/Code/Smart Garden/Smart Garden/Smart Garden.componentinfo.xml
 /Firmware/Code/Smart Garden/Smart Garden/Smart Garden.cppproj
 /Firmware/Code/Smart Garden/ArduinoCore
+
+/Firmware/Code/Настройки контроллера (через UART).txt
+/Firmware/Code/Настройки контроллера на даче.txt
